--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="stylesheet" href="build/css/styles.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <title>Title</title>
+    <title>github user lookup</title>
   </head>
   <body>
-
+    <div class="container">
+      <p> this is my project hey </p>
+    </div>
   </body>
 </html>
