add page number functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
   </head>
   <body>
     <div class="container">
-      <p> this is my project hey </p>
+      <p> this is my project hey, </p>
+      <form id="search-user">
+  			<label for="user-query">enter the username:
+  				<input type="text" id="user-query" value="DariusCapizzi">
+  				<button type="submit">See the Repos</button>
+  			</label>
+		  </form>
+
+      <div>
+        <div id="user-image">
+        </div>
+        <div id="owner-info">
+		    </div>
+      </div>
+      <button id="more">more</button>
+      <div class="repositories">
+
+	    </div>
+      <p>pages: </p>
+      <ol id="page-numbers"></ol>
     </div>
   </body>
 </html>
