add readme and some minor misc changes

--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
   			</label>
 		  </form>
 
-      <div>
+      <div id="user-info">
         <div id="user-image">
         </div>
-        <div id="owner-info">
+        <div id="other-info">
 		    </div>
       </div>
-      <button id="more">more</button>
+
       <div class="repositories">
 
 	    </div>
-      <p>pages: </p>
-      <ol id="page-numbers"></ol>
+      <div id="page-numbers">  </div>
     </div>
   </body>
 </html>
